decent startup time but it still sucks and is weird af and something is wrong

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,9 +2,13 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind o split-window -c "#{pane_current_path}"
+bind p split-window -h -c "#{pane_current_path}"
+
 bind c new-window -c "#{pane_current_path}"
+
+bind-key - kill-window
+bind-key x kill-pane
 
  set -sg escape-time 5
 
@@ -15,7 +19,7 @@ setw -g pane-base-index 1
  set -g mouse on
  bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!" # quick reloajjd
 
-
+set-option -g history-limit 5000
 
 
 
@@ -51,10 +55,6 @@ set -g @minimal-tmux-status-left-extra ""
 # Not recommended to change these values
 set -g @minimal-tmux-status-right "#S"
 
-# If getting strings cut in left status or right 
-# Here 20 is the length of the characters in the string
-set -g status-left-right 20
-set -g status-left-length 20
 
 
 
