--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,21 +1,39 @@
-background #1c1c1c
-foreground #ddeedd
-cursor #e2bbef
-selection_background #4d4d4d
-color0 #3d352a
-color8 #554444
-color1 #cd5c5c
-color9 #cc5533
-color2 #86af80
-color10 #88aa22
-color3 #e8ae5b
-color11 #ffa75d
-color4 #6495ed
-color12 #87ceeb
-color5 #deb887
-color13 #996600
-color6 #b0c4de
-color14 #b0c4de
-color7 #bbaa99
-color15 #ddccbb
-selection_foreground #1c1c1c
+## name: Cherry Midnight
+## author: nullxception
+## license: GPLv3
+## upstream: https://github.com/nullxception/cherry-kde/raw/main/kitty/cherry-midnight.conf
+
+foreground #bdc3df
+
+background #000000
+# background #101017
+
+selection_foreground #101017
+selection_background #bdc3df
+
+cursor #bdc3df
+cursor_text_color #101017
+url_color #85b6ff
+
+tab_bar_background #101017
+active_tab_foreground #bdc3df
+active_tab_background #33333f
+inactive_tab_foreground #dedeff
+inactive_tab_background #101017
+
+color0  #33333f
+color1  #ff568e
+color2  #64de83
+color3  #efff73
+color4  #73a9ff
+color5  #946ff7
+color6  #62c6da
+color7  #dedeff
+color8  #43435a
+color9  #ff69a2
+color10 #73de8a
+color11 #f3ff85
+color12 #85b6ff
+color13 #a481f7
+color14 #71c2d9
+color15 #ebebff
