--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,19 +1,16 @@
 # vim:fileencoding=utf-8:foldmethod=marker
-
-
-
 allow_remote_control socket-only
 listen_on unix:/tmp/kitty
 
 background_opacity 0.9
 
 
-font_family      Monaco Regular
+font_family      Terminess Nerd Font Regular 
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 14.0
+font_size 20.0
 force_ltr yes
 
 adjust_line_height  0
