--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,6 +6,7 @@ background_opacity 0.9
 
 
 font_family      Terminess Nerd Font Regular 
+# font_family     Monaco Regular
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
