--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,17 +11,22 @@ bind-key - kill-window
 bind-key x kill-pane
 
 
- set -sg escape-time 5
+set -sg escape-time 5
 
 #numbering windows and panes from 1
 set -g base-index 1
 setw -g pane-base-index 1
 
- set -g mouse on
- bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!" # quick reloajjd
+set -g mouse on
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!" # quick reloajjd
 
 set-option -g history-limit 5000
 # List of plugins
+
+set -g allow-passthrough all
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
