--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,15 +2,14 @@
 allow_remote_control socket-only
 listen_on unix:/tmp/kitty
 
-background_opacity 0.75
+background_opacity 1.0
 
-
-font_family     Monaco Regular
+font_family      JetBrainsMonoNL Nerd Font Mono 
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 15.0
+font_size 14.0
 force_ltr yes
 
 adjust_line_height  0
@@ -32,7 +31,7 @@ scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 
 scrollback_pager_history_size 0
 
-wheel_scroll_multiplier 5.0
+wheel_scroll_multiplier 20.0
 
 touch_scroll_multiplier 1.0
 
